namespace DocumentProcessor.Interfaces;

public interface IDocumentProcessor
{
  void ProcessDocument(string content);
}