namespace DocumentProcessor.Models
{
    public enum DocumentType
    {
        Pdf,
        Word,
        Excel
    }
}